--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -131,15 +131,26 @@
       {% endif %}
     </div>
 
+    {% assign affiliate = false %}
+    {% for tag in product.tags %}
+        {% if tag contains "affiliate_https" %}
+          {% assign link = tag | remove: 'affiliate_https:' %}
+          {% assign affiliate = true %}
+        {% endif %}
+    {% endfor %}
+
     <div class="grid__item {{ product_description_width }}">
       <div class="product-single__meta">
         <h1 class="product-single__title">{{ product.title }}</h1>
+        {% if affiliate != true %}
         <div>⭐⭐⭐⭐⭐</div>
+        {% endif %}
         <script>window.performance.mark('debut:product:title_visible');</script>
-
+        {% if affiliate != true%}
           <div class="product__price">
             {% include 'product-price', variant: current_variant, show_vendor: section.settings.show_vendor %}
           </div>
+        {% endif %}
 
           {%- if cart.taxes_included or shop.shipping_policy.body != blank -%}
             <div class="product__policies rte" data-product-policies>
@@ -217,6 +228,7 @@
                 {%- if section.settings.enable_payment_button %} product-form__item--payment-button {%- endif -%}
                 {%- if product.has_only_default_variant %} product-form__item--no-variants {%- endif -%}"
               >
+              {% if affiliate != true%}
                 <button type="submit" name="add"
                   {% unless current_variant.available %} aria-disabled="true"{% endunless %}
                   aria-label="{% unless current_variant.available %}{{ 'products.product.sold_out' | t }}{% else %}{{ 'products.product.add_to_cart' | t }}{% endunless %}"
@@ -236,6 +248,9 @@
                 </button>
                 {% if section.settings.enable_payment_button %}
                   {{ form | payment_button }}
+                {% endif %}
+                {% else %}
+                <a class="btn" style="width:100%" href="{{link}}" target="_blank">See on Amazon</a>
                 {% endif %}
               </div>
             </div>
