Fixed small bug.

--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -250,7 +250,7 @@
                   {{ form | payment_button }}
                 {% endif %}
                 {% else %}
-                <a class="btn" style="width:100%" href="{{link}}" target="_blank">See on Amazon</a>
+                <a class="btn" data-add-to-cart style="width:100%" href="{{link}}" target="_blank">See on Amazon</a>
                 {% endif %}
               </div>
             </div>
